modules/015-admission-policy-engine/charts/constraint-templates/tests/pods-deny-tolerations/allowed_exempt_ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exempt
  namespace: kube-system
spec:
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: Exists
  containers:
  - name: c
    image: nginx
