modules/015-admission-policy-engine/charts/constraint-templates/tests/pods-deny-tolerations/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8PodsDenyTolerations
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    forbiddenKeys:
      - "node-role.kubernetes.io/master"
      - "node-role.kubernetes.io/control-plane"
    exemptNamespaces:
      - "kube-system"
      - "d8-system"
      - "d8-admission-policy-engine"
      - "gatekeeper-system"
