modules/015-admission-policy-engine/charts/constraint-templates/tests/pods-deny-tolerations/disallowed_toleration_key.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  tolerations:
  - key: "node-role.kubernetes.io/control-plane"
    operator: Exists
  containers:
  - name: c
    image: nginx
